2 files modified, 2 added, 1 deleted

--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,14 @@ li {
   list-style: none;
   padding: 0;
 }
+
+.instructions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.instructions img {
+  width: 100px;
+  height: 100px;
+}
