--- a/src/components/AnimalCard/AnimalCard.css
+++ b/src/components/AnimalCard/AnimalCard.css
@@ -9,3 +9,19 @@
   text-align: center;
   width: 100%;
 }
+
+.animal-wrapper {
+  border: solid black 1px;
+  margin: 10px;
+  padding: 10px;
+  width: 200px;
+}
+
+.animal-wrapper button {
+  font-size: 1em;
+  border: solid black 1px;
+  padding: 10;
+  background: none;
+  cursor: pointer;
+  margin: 10px 0;
+}
